RESOLVED FIXED73542
Shadow ID pseudo-element selectors serialize incorrectly
https://bugs.webkit.org/show_bug.cgi?id=73542
Summary Shadow ID pseudo-element selectors serialize incorrectly
Roland Steiner
Reported 2011-12-01 02:14:43 PST
Shadow ID pseudo-elements add a whitespace between the host element part and the pseudo-element when being serialized. E.g.: #a::-webkit-slider-thumb becomes #a ::webkit-slider-thumb which has a different meaning.
Attachments
Patch (7.41 KB, patch)
2011-12-01 02:18 PST, Roland Steiner
no flags
Roland Steiner
Comment 1 2011-12-01 02:18:26 PST
Dimitri Glazkov (Google)
Comment 2 2011-12-01 09:11:02 PST
Comment on attachment 117386 [details] Patch ooh, good catch. Thanks!
WebKit Review Bot
Comment 3 2011-12-01 09:47:41 PST
Comment on attachment 117386 [details] Patch Clearing flags on attachment: 117386 Committed r101679: <http://trac.webkit.org/changeset/101679>
WebKit Review Bot
Comment 4 2011-12-01 09:47:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.