Shadow ID pseudo-element selectors serialize incorrectly https://bugs.webkit.org/show_bug.cgi?id=73542

Source/WebCore:

Avoid space for ShadowDescendant combinator.

Reviewed by Dimitri Glazkov.

* css/CSSSelector.cpp:
(WebCore::CSSSelector::selectorText):

LayoutTests:

Add test cases for complex selectors with shadow ID pseudo-elements.

Reviewed by Dimitri Glazkov.

* fast/css/css-selector-text-expected.txt:
* fast/css/css-selector-text.html:
* fast/css/css-set-selector-text-expected.txt:
* fast/css/css-set-selector-text.html:


Canonical link: https://commits.webkit.org/90151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101679 268f45cc-cd09-0410-ab3c-d52691b4dbfc